[gh-pages] fix navigation z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -739,7 +739,7 @@ ul.slider_content{
   width: 90%;
   margin: 0 auto;
   position: relative;
-  z-index: 100;
+  z-index: 99;
   a  {
         position              : absolute;
         top                   : -195px;
